--- a/Section-00/index.html
+++ b/Section-00/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Section 01</title>
-    <link rel="stylesheet" href="css/app.css">
-    <script type="module" src="js/app.js"></script>
+    <title>Pong</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<canvas id="GameCanvas" width="800" height="600"></canvas>
+    <canvas id="GameCanvas" width="800" height="600"></canvas>
+    <script type="module" src="dist/app2.js"></script>
 </body>
 </html>
